# ximmio-client

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
ximmio/: client.py
ximmio/models/: __init__.py  address.py  calendar_settings.py
ximmio_client/: client.py
ximmio_client/models/: __init__.py  calendar.py  category.py  company_info.py  response.py
