[project]
name = "ximmio-client"
version = "0.1.0"
dependencies = [
    "pydantic[timezone] >= 2",
    "httpx",
]
requires-python = ">= 3.10"
authors = [
    {name = "Jasper Bok", email = "hello@jasperbok.nl"}
]
maintainers = [
    {name = "Jasper Bok", email = "hello@jasperbok.nl"}
]
description = "A client for Ximmio's Waste API."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.txt"]
keywords = ["api", "client", "waste", "ximmio", "acv"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Repository = "https://github.com/jasperbok/ximmio-client"
Issues = "https://github.com/jasperbok/ximmio-client/issues"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
